adding product cloud environment

--- a/Dynamic Form Builder using .NET CORE WEB API and Angular/appsettings.json
+++ b/Dynamic Form Builder using .NET CORE WEB API and Angular/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-G3D5UCH\\SQLEXPRESS;Database=DynamicFormDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-G3D5UCH\\SQLEXPRESS;Database=DynamicFormDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "GCPCloudConnection": "Data Source=35.223.95.176;Initial Catalog=GCPDynamicFormDB;User ID=syedumerhasan;Password=syedumerhasan"
   }
 }
